--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,13 @@
+@keyframes fade {
+    from {opacity: 0.4}
+    to {opacity: 1}
+}
+
+.fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
 .carousel-item.active {
     display: flex;
 }
@@ -19,34 +29,36 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    width: 150px;
+    width: 50px;
     height: 30px;
-}
-
-.carousel-indicators .active {
-    background-color: rgba(255, 255, 255, 0.8);
-}
-
-.carousel-indicators li {
-    width: 40px;
-    height: 2px;
-    background-color: rgba(255, 255, 255, 0.2);
     z-index: 1;
 }
 
+.carousel-indicators .carousel-indicator {
+    cursor: pointer;
+    width: 10px;
+    height: 10px;
+    background-color: rgba(255, 255, 255, 0.2);
+    border-radius: 50%;
+}
+
+.carousel-indicators .carousel-indicator.active {
+    background-color: rgba(255, 255, 255, 0.8);
+}
+
 .carousel-inner {
-    border: 2px solid black;
     height: 100%;
+    background-color: rgba(0, 0, 0, 0.1);
 }
 
 .carousel-item {
     display: none;
     background-color: rgba(0, 0, 0, 0.9);
     height: 100%;
+    width: 100%;
 }
 
 .carousel-item img {
-    position: relative;
     width: 100%;
 }
 
